docs: OpenCode rules + skills (SOLID, tiles, multiplayer, code-quality, subagents, session-checkpoint)